--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 setuptools>=0.7
 Flask==0.10.1
+Flask-SQLAlchemy==1.0
 Jinja2==2.7.1
 MarkupSafe==0.18
+SQLAlchemy==0.8.4
 Werkzeug==0.9.4
 argparse==1.2.1
+feedparser==5.1.3
 gunicorn==18.0
 itsdangerous==0.23
+psycopg2==2.5.1
 wsgiref==0.1.2
